--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -73,3 +73,7 @@ urllib3==1.23
 Werkzeug==0.14.1
 xlrd==1.0.0
 XlsxWriter==1.1.2
+mysqlclient==1.4.1
+wheel==0.32.3
+gunicorn==19.9.0
+psycopg2==2.7.7
