--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -23,6 +23,7 @@ ADD requirements.txt /app/requirements.txt
 RUN /env/bin/pip install --upgrade pip && /env/bin/pip install -r /app/requirements.txt
 ADD . /app
 
-CMD export DJANGO_PASSWORD=$(cat /etc/secrets/djangouserpw);
+ENV DJANGO_PASSWORD $DJANGO_PASSWORD
+ENV DJANGO_SECRET_KEY $DJANGO_SECRET_KEY
 CMD gunicorn -b :$PORT map.wsgi
 # [END docker]
