Visador list updated. Models for icons

--- a/web/tasador.1.yaml
+++ b/web/tasador.1.yaml
@@ -30,7 +30,7 @@ metadata:
   labels:
     app: tasador
 spec:
-  replicas: 2
+  replicas: 1
   template:
     metadata:
       labels:
@@ -39,7 +39,7 @@ spec:
       containers:
       - name: tasador-app
         # Replace  with your project ID or use `make template`
-        image: gcr.io/proyectoinmobiliario-212003/tasador
+        image: gcr.io/proyectoinmobiliario-212003/tasador:v0.1
         # This setting makes nodes pull the docker image every time before
         # starting the pod. This is useful when debugging, but should be turned
         # off in production.
@@ -103,28 +103,3 @@ spec:
           emptyDir:
       # [END volumes]        
 # [END kubernetes_deployment]
-
----
-
-# [START service]
-# The polls service provides a load-balancing proxy over the polls app
-# pods. By specifying the type as a 'LoadBalancer', Container Engine will
-# create an external HTTP load balancer.
-# For more information about Services see:
-#   https://cloud.google.com/container-engine/docs/services/
-# For more information about external HTTP load balancing see:
-#   https://cloud.google.com/container-engine/docs/load-balancer
-apiVersion: v1
-kind: Service
-metadata:
-  name: tasador
-  labels:
-    app: tasador
-spec:
-  type: LoadBalancer
-  ports:
-  - port: 80
-    targetPort: 8080
-  selector:
-    app: tasador
-# [END service]
